--- a/.-.html
+++ b/.-.html
@@ -275,7 +275,7 @@
                 <div class="link-text">Join Channel Telegram</div>
             </a>
             
-            <a href="https://akbar675-prog.github.io/PREMIUM-AI-CHATBOT-V1/UPDATEBuyme.html" class="link-item">
+            <a href="https://akbar675-prog.github.io/ai/UPDATEBuyme.html" class="link-item">
                 <div class="link-icon">
                     <svg class="icon-svg" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M7 4h-2l-3 7v2h2l3-7h11l3 7h2v-2l-3-7h-13zm0 9a3 3 0 100 6 3 3 0 000-6zm10 0a3 3 0 100 6 3 3 0 000-6zm-10 2a1 1 0 110 2 1 1 0 010-2zm10 0a1 1 0 110 2 1 1 0 010-2z"/>
@@ -284,7 +284,7 @@
                 <div class="link-text">My Store</div>
             </a>
             
-            <a href="https://akbar675-prog.github.io/PREMIUM-AI-CHATBOT-V1/UPDATEBuyme.html" class="link-item">
+            <a href="https://akbar675-prog.github.io/ai/UPDATEBuyme.html" class="link-item">
                 <div class="link-icon">
                     <svg class="icon-svg" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M3 7l9 9 9-9v-4h-18v4zm18 2l-9 9-9-9v10h18v-10z"/>
