--- a/IPHONE-QUOTE-V1.html
+++ b/IPHONE-QUOTE-V1.html
@@ -378,7 +378,7 @@
     const timeInput = document.getElementById('timeInput');
     const signalSelect = document.getElementById('signalSelect');
 
-    const sfxAudio = new Audio('sfx2.mp3');
+    const sfxAudio = new Audio('sfx.mp3');
 
     function showToast(title, description, type = 'success') {
         toastTitle.textContent = title;
